--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "gu.doc.tar.xz": 1c4d6f09ae8ee365c1bf69fe1508cd7674d8c46e
-  "gu.tar.xz": a141a66af930e5b509d2cbcc82a77aa524cd4ea1
+  gu.doc.tar.xz: 94c75aeed3b8a729717a8a8471cc013cf5a0c399
+  gu.tar.xz: 1b0137dcfdf30a3bb89674ad61f43d9316527547
