--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  gu.doc.tar.xz: 84b9800ffdecd4c1d23ee935a6a59413a900d101
-  gu.tar.xz: e3d4cefc84faea4f35674608149936bc0ea58705
+  gu.doc.r15878.tar.xz: 5ae74123b44f79da34c1ce1840d09cc1c4a9a7ca
+  gu.r15878.tar.xz: 02e16b75bab1a2d1297fb79e912b0d10b442da70
